start working on JPackagerMojo